# web-rs

./: Cargo.toml  README.md  stackoverflow-web-open-raw.json
config/: default.yaml
scripts/: deploy-fro.ps1
src/: app.rs  arguments.rs  cli.rs  config.rs  direct.rs  error.rs  lib.rs  main.rs  mcp.rs  models.rs  net.rs  page.rs  search.rs
src/app/: tests.rs
src/arguments/: aliases.rs  field.rs  normalizer.rs  request.rs  singleton.rs  support.rs  tests.rs  typed.rs
src/arguments/typed/: validation.rs
src/cli/: tests.rs
src/config/: embedded.rs  tests.rs  types.rs  validation.rs
src/direct/: code_hosts.rs  content.rs  fetch.rs  mediawiki.rs  package.rs  stack_overflow.rs  target.rs  tests.rs
src/direct/fetch/: tests.rs
src/mcp/: handler.rs  processing.rs  protocol.rs  schemas.rs  server.rs  tests.rs  tools.rs
src/mcp/tools/: tests.rs
src/net/: body.rs  client.rs  resolver.rs  ssrf.rs  tests.rs
src/net/body/: tests.rs
src/page/: chunking.rs  fetcher.rs  finder.rs  jina.rs  open.rs  reader.rs  tests.rs  tinyfish.rs
src/page/fetcher/: targets.rs  tests.rs
src/page/jina/: tests.rs
src/page/tinyfish/: tests.rs
src/search/: exa.rs
