[package]
name = "web-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
axum = { version = "*", features = ["macros"] }
chrono = { version = "*", default-features = false, features = ["clock", "std"] }
futures = "*"
http = "*"
mimalloc = { version = "*", features = ["v3"] }
percent-encoding = "*"
regex = "*"
reqwest = { version = "*", default-features = false, features = ["deflate", "gzip", "json", "rustls-tls"] }
rmcp = { version = "*", features = ["macros", "schemars", "server", "transport-streamable-http-server"] }
schemars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde-saphyr = "*"
sonic-rs = "*"
strsim = "*"
thiserror = "*"
tiktoken = "*"
tokio = { version = "*", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt"] }
url = "*"
urlencoding = "*"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
keyword-idents = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
rust-2024-compatibility = "warn"

missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
else_if_without_else = "allow"
exhaustive_structs = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
min_ident_chars = "allow"
multiple_crate_versions = "allow"
non_ascii_literal = "allow"
panic = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_pub_crate = "allow"
separated_literal_suffix = "allow"
self_named_module_files = "allow"
semicolon_outside_block = "allow"
similar_names = "allow"
single_call_fn = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "allow"
unwrap_used = "allow"
wildcard_dependencies = "allow"
